force-app/main/default/objects/Expense_Summary__c/Expense_Summary__c.object-meta.xml
<CustomObject>
    <label>Expense Summary</label>
    <nameField>
        <label>Year-Month (YYYY-MM)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>