force-app/main/default/objects/Expense_Summary__c/fields/Month_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Month_Balance_Amount__c</fullName>
    <formula>Total_Credit__c -  Total_Debit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>