force-app/main/default/objects/Expense_Summary__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <description>Sum of all incoming payment</description>
    <inlineHelpText>Sum of all incoming payment</inlineHelpText>
    <label>Total Credit</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expense__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit - IN</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense__c.Expense_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>