force-app/main/default/objects/Expense_Summary__c/fields/Total_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit__c</fullName>
    <description>Sum of all outgoing payments</description>
    <inlineHelpText>Sum of all outgoing payments</inlineHelpText>
    <label>Total Debit</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expense__c.Type__c</field>
        <operation>equals</operation>
        <value>Debit - OUT</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense__c.Expense_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>