force-app/main/default/objects/Expense_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Credit__c</columns>
    <columns>Total_Debit__c</columns>
    <columns>Month_Balance_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>